[project]
name = "model_helper"
version = "0.1.0"
description = "model-helper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
model_helper = "model_helper.main:run"
run_crew = "model_helper.main:run"
train = "model_helper.main:train"
replay = "model_helper.main:replay"
test = "model_helper.main:test"
run_with_trigger = "model_helper.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
